--- a/twig/base.twig
+++ b/twig/base.twig
@@ -16,8 +16,12 @@
 				{% endif %}
 
 			{% endblock %}
+            {% block filters %}
 
-        <section data-role="container">
+
+            {% endblock %}
+
+        <section data-role="container" data-mix>
 			{% block base %}
 
 		<header>
