Adding new rights and a footer role

--- a/styles/stylus/style.styl
+++ b/styles/stylus/style.styl
@@ -16,6 +16,15 @@ form
     select
         background-color #FFF
 
+footer[role="footer"]
+    position fixed
+    bottom 0px
+    left 0px
+    right 0px
+    height 30px
+    color #427FA2
+    text-align center
+
 
 nav[data-role="toolbar"]
 
