Adding toolbar js helpers, progressFrom methods and oolbar styles. Adding modernizr.js

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -337,10 +337,17 @@ header
 
 *[data-style="light"]
     color transparize(secondary_color,0.255555)
+a[data-style="light"]:hover
+    color transparize(secondary_color,0.355555)
     
 *[data-style="light-less"]
     color transparize(secondary_color,0.455555)
+a[data-style="light-less"]:hover
+    color transparize(secondary_color,0.555555)
 
 *[data-style="light-more"]
     color transparize(secondary_color,0.155555)
+a[data-style="light-more"]:hover
+    color transparize(secondary_color,0.255555)
+
 
