--- a/styles/stylus/style.styl
+++ b/styles/stylus/style.styl
@@ -15,6 +15,8 @@ body
 form
     select
         background-color #FFF
+    textarea
+        font-family 'Oxygen', sans-serif
 
 footer[role="footer"]
     position fixed
@@ -41,3 +43,4 @@ nav[data-role="toolbar"]
             color primary_color
             text-align center
             padding 5px
+
