--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -12,10 +12,11 @@
 a
     color link_color
 
-/*
-body
-    background-color background_color
-*/
+
+// That is a personnal choice.
+*
+    box-sizing      border-box
+    -moz-box-sizing border-box
 
 /////////////////////////////////////////////////////////
 //                          Buttons                      //
