--- a/styles/stylus/moon/variables.styl
+++ b/styles/stylus/moon/variables.styl
@@ -32,8 +32,8 @@ background_color         = #FFF    //white
 
 //\\//\\//\\//\\//\\    MEASURES    //\\//\\//\\//\\//\\
 
-base_height              = 20px
-base_width               = 228px
+base_height              = 30px
+base_width               = 50%
 
 input_margin_top         = 4px
 input_margin_right       = 4px
@@ -49,5 +49,5 @@ mixed_form_max_width     = 50%
 
 
 
-select_height = base_height + (2*input_padding_top) + (2*input_border_width)
-select_width = base_width + (2*input_padding_right) + (2*input_border_width)
+select_height = base_height
+select_width = base_width
