--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -370,10 +370,18 @@ table[role="rows"]
     tr td a > i
         margin-right 10px
 
+*[data-font="thin"]
+    font-weight 600
+
 *[role="separator"]
     font-size 1em
     color transparize(secondary_color,0.3)
     text-align center
+
+*[role="line"]
+    min-height  10px
+    padding-bottom 10px
+    border-bottom   1px solid transparize(secondary_color,0.1)
 
 /////////////////////////////////////////////////////////
 //                      Headings                       //
