--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -189,6 +189,7 @@ body > section[data-display="monobox"]
 aside[data-role="icon-left-side"]
     display inline-block
     height 100%
+    vertical-align top
     font-size 2.7em
     min-width 20%
     text-align right
@@ -198,15 +199,11 @@ aside[data-role="icon-left-side"]
         min-width 75%
         text-align left
         h2, h3
-            width 100%
-        h3
             font-weight 600
+            width 100%
 
 *[line-down]
     line-height 0px
-
-*[data-upper]:first-letter
-    text-transform capitalize
 
 /////////////////////////////////////////////////////////
 //                          Buttons                    //
