--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -331,6 +331,7 @@ form[data-align="horizontal"]
     button,
     textarea,
     select
+        width   auto
         display inline-block
     label
         margin-left 10px
