--- a/styles/stylus/style.styl
+++ b/styles/stylus/style.styl
@@ -20,7 +20,7 @@ form
         font-family 'Oxygen', sans-serif
 
 footer[role="footer"]
-    position fixed
+    /*position fixed*/
     bottom 0px
     left 0px
     right 0px
@@ -45,3 +45,8 @@ nav[data-role="toolbar"]
             text-align center
             padding 5px
 
+.well
+    background-color transparize(secondary_color, 0.05)
+    border 1px solid transparize(secondary_color, 0.2)
+    padding 0px 10px
+    border-radius 3px
