--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -270,8 +270,8 @@ form[data-type="smart-input"]
             background-color transparize(old_p,0.0)
             color transparize(old_p,0.8);
             font-size 1.2rem
-            border input_border_width dashed transparent
-            border-bottom input_border_width dashed transparize(old_p,0.2)
+            border input_border_width solid transparent
+            border-bottom input_border_width solid transparize(old_p,0.2)
             border-radius(0px)
             box-shadow(inset 0 1px 3px rgba(0,0,0,0)\,0 0 8px rgba(0,0,0,0))
         textarea::-webkit-input-placeholder,
@@ -288,7 +288,7 @@ form[data-type="smart-input"]
             color transparize(old_p,0.5)
         textarea:hover,
         input:hover
-            border-bottom input_border_width dashed transparize(old_p,0.5)
+            border-bottom input_border_width solid transparize(old_p,0.5)
 
         *[type="submit"]
             margin auto
@@ -301,7 +301,7 @@ form[data-type="smart-input"]
         textarea:focus:hover,
         input:focus:hover
             outline: none;
-            border input_border_width dashed transparent
+            border input_border_width solid transparent
             background-color transparize(old_p,0.1)
 
     input,
@@ -310,8 +310,8 @@ form[data-type="smart-input"]
         background-color transparize(old_p,0.0)
         color transparize(old_p,0.8);
         font-size 1.2rem
-        border input_border_width dashed transparent
-        border-bottom input_border_width dashed transparize(old_p,0.2)
+        border input_border_width solid transparent
+        border-bottom input_border_width solid transparize(old_p,0.2)
         border-radius(0px)
         box-shadow(inset 0 1px 3px rgba(0,0,0,0)\,0 0 8px rgba(0,0,0,0))
     textarea::-webkit-input-placeholder,
@@ -328,14 +328,14 @@ form[data-type="smart-input"]
         color transparize(old_p,0.5)
     textarea:hover,
     input:hover
-        border-bottom input_border_width dashed transparize(old_p,0.5)
+        border-bottom input_border_width solid transparize(old_p,0.5)
 
     *[type="submit"]
         background-color transparize(old_p,0.9)
         color monochrome(old_p)
         font-size 1.2rem
         height auto
-        border input_border_width dashed transparent
+        border input_border_width solid transparent
 
     &:not([data-align="horizontal"]) *[type="submit"]
         padding 4px 0px
@@ -348,7 +348,7 @@ form[data-type="smart-input"]
     textarea:focus:hover,
     input:focus:hover
         outline: none;
-        border input_border_width dashed transparent
+        border input_border_width solid transparent
         background-color transparize(old_p,0.1)
 
 
