--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -296,6 +296,8 @@ form
     input[type="tel"],
     input[type="color"]
         width base_width
+        height base_height + 2*input_border_width
+        line-height base_height + 2*input_border_width
         padding input_padding_top input_padding_right
         margin input_margin_top input_margin_right
     select
