--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -108,7 +108,7 @@ section[data-align="center"]
         vendor(flex,1 0 300px)
 
 article
-    margin-top 20px
+    margin 10px 0px
     h1
         font-size 1.5em
     h2
@@ -204,6 +204,9 @@ aside[data-role="icon-left-side"]
 
 *[line-down]
     line-height 0px
+
+*[space-down]
+    padding-bottom 10px
 
 /////////////////////////////////////////////////////////
 //                          Buttons                    //
