--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -350,6 +350,12 @@ form[data-align="horizontal"]
         float right
     span
         display inline-block
+        label
+            max-width 50%
+            &+*
+              max-width 40%
+              width 160px
+              float left
         
 form[data-align="vertical"]
   input,
